--- a/product-service/package.json
+++ b/product-service/package.json
@@ -14,21 +14,30 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.18.6",
-    "@babel/preset-env": "^7.18.6",
+    "@babel/core": "^7.18.9",
+    "@babel/preset-env": "^7.18.9",
     "babel-jest": "^28.1.3",
-    "babel-loader": "^8.1.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-loader": "^8.2.5",
     "jest": "^28.1.3",
+    "serverless-dotenv-plugin": "^4.0.1",
     "serverless-plugin-webpack": "^1.5.1",
-    "webpack": "^5.3.1"
+    "webpack": "^5.73.0"
   },
   "dependencies": {
-    "@middy/core": "^1.4.0",
-    "@middy/http-cors": "^1.4.0",
+    "@middy/core": "^3.1.0",
+    "@middy/error-logger": "^3.1.0",
+    "@middy/http-cors": "^3.1.0",
+    "@middy/http-error-handler": "^3.1.0",
+    "@middy/http-header-normalizer": "^3.1.0",
+    "@middy/http-json-body-parser": "^3.1.0",
+    "@middy/http-response-serializer": "^3.1.0",
+    "@middy/input-output-logger": "^3.1.0",
+    "@middy/util": "^3.1.0",
     "@types/jest": "^28.1.6",
     "eslint-plugin-jest": "^26.6.0",
+    "http-errors": "^2.0.0",
+    "joi": "^17.6.0",
     "middy-autoproxyresponse": "^0.1.0",
-    "uuid": "^8.3.1"
+    "pg": "^8.7.3"
   }
 }
