--- a/import-service/package.json
+++ b/import-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "product-service",
+  "name": "import-service",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -34,9 +34,10 @@
     "@middy/input-output-logger": "^3.1.0",
     "@middy/util": "^3.1.0",
     "@types/jest": "^28.1.6",
+    "aws-sdk": "^2.789.0",
+    "aws-sdk-mock": "^5.7.0",
+    "csv-parser": "^3.0.0",
     "eslint-plugin-jest": "^26.6.0",
-    "http-errors": "^2.0.0",
-    "joi": "^17.6.0",
-    "pg": "^8.7.3"
+    "http-errors": "^2.0.0"
   }
 }
