--- a/import-service/serverless.yml
+++ b/import-service/serverless.yml
@@ -9,6 +9,10 @@ provider:
   region: ${env:REGION}
   stage: dev
 
+  environment:
+    SQS_NEW_PRODUCT_URL:
+      Ref: NewProductSQSQueue
+
   iamRoleStatements:
     - Effect: "Allow"
       Action: "s3:ListBucket"
@@ -19,6 +23,21 @@ provider:
         - "s3:*"
       Resource:
         - "arn:aws:s3:::aws-shop-imported-files/*"
+    - Effect: "Allow"
+      Action: "sqs:*"
+      Resource:
+        - Fn::GetAtt: [ NewProductSQSQueue, Arn ]
+
+resources:
+  Resources:
+    NewProductSQSQueue:
+      Type: AWS::SQS::Queue
+      Properties:
+        QueueName: catalogItemsQueue
+  Outputs:
+    NewProductSQSQueueArn:
+      Value:
+        Fn::GetAtt: [NewProductSQSQueue, Arn]
 
 plugins:
   - serverless-plugin-webpack
